--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
     		<groupId>org.aspectj</groupId>
     		<artifactId>aspectjweaver</artifactId>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.apache.commons</groupId>
+    		<artifactId>commons-csv</artifactId>
+    		<version>1.8</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
